--- a/navbar.css
+++ b/navbar.css
@@ -38,3 +38,31 @@ text-decoration: none;
 li a:hover {
 background-color: #111111;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  background-color: rgba(51,51,51,1);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  color: aliceblue;
+
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
