Add Download CV

--- a/progress.css
+++ b/progress.css
@@ -1,16 +1,16 @@
-*{
+* {
     box-sizing: border-box;
 }
 
 /*Add a gray background color with some padding */
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 20px;
     background: #f1f1f1;
 }
 
 /* Header/Blog Title*/
-.header{
+.header {
     padding: 30px;
     font-size: 40px;
     text-align: center;
@@ -19,43 +19,49 @@ body{
 
 /*Create two unequal columns that float to each other */
 /*Left column*/
-.leftcolumn{
+.leftcolumn {
     float: left;
-    width: 100%;
+    width: 75%;
 }
 
-/* .rightcolumn{
+.rightcolumn {
     float: left;
     width: 25%;
     padding-left: 20px;
-} */
+}
 
 
 /*Image*/
-.img{
-    width: 100px;
+.blog-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
     padding: 20px;
 }
 
+.fakeimg {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
+}
 /*Add a card effect for articles*/
-.card{
+.card {
     background-color: white;
     padding: 20px;
     margin-top: 20px;
 }
 
 /*Clear floats after the columns*/
-.row:after{
+.row:after {
     content: "";
     display: table;
     clear: both;
 }
 
 /*Footer*/
-.footer{
+.footer {
     padding: 20px;
     text-align: center;
     background: #ddd;
     margin-top: 20px;
 }
-
