--- a/navbar.css
+++ b/navbar.css
@@ -14,7 +14,10 @@ ul{
 }
 
 header {
+display: flex;
 position: fixed;
+justify-content: space-between;
+align-items: center;
 top:0px;
 width: 100%;
 }
